--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "daisyui": "^3.2.1",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "flowbite": "^1.7.0",
+    "tw-elements": "^1.0.0-beta2"
   }
 }
